--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11,3 +11,14 @@ body {
 .center-text {
 	text-align:center;
 }
+.pagination {
+	list-style-type: none;
+	text-align: center;
+	margin: 0;
+	padding: 0;
+}
+.pagination li {
+  	display: inline-block;
+  	font-size: 15px;
+  	padding: 15px;
+}
